# nfl-data-ingestion

./: .dockerignore  .gitignore  Dockerfile  build_image.sh  pyproject.toml
.devcontainer/: devcontainer.json  post_start_command.sh
.github/workflows/: deploy_image.yml
schedule_ingestion/: global_variables.py  models.py
scripts/: load_games.py  rebuild_schema  rebuild_schema.py  update.py  update_games  update_games.py
src/: global_variables.py  ingestions.py  models.py  utils.py
